--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
+    android:background="@color/grey"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -15,7 +16,7 @@
         android:gravity="center"
         android:onClick="onClick"
         android:text="@string/red"
-        android:textColor="@color/colorRed" />
+        android:textColor="@color/colorPrimary" />
 
     <Button
         android:id="@+id/yellow"
@@ -24,7 +25,7 @@
         android:gravity="center"
         android:onClick="onClick"
         android:text="@string/yellow"
-        android:textColor="@color/colorYellow" />
+        android:textColor="@color/colorPrimaryDark" />
 
     <Button
         android:id="@+id/green"
@@ -33,6 +34,6 @@
         android:gravity="center"
         android:onClick="onClick"
         android:text="@string/green"
-        android:textColor="@color/colorGreen" />
+        android:textColor="@color/colorAccent" />
 
 </LinearLayout>
